--- a/code/src/styles/posts-styles.scss
+++ b/code/src/styles/posts-styles.scss
@@ -8,12 +8,14 @@
   overflow-y: auto;
 
   .projects-title-container {
-    margin: 0.2rem;
+    margin: 1rem;
 
     .projects-title {
-      font-size: 128px;
+      font-size: 7rem;
+      @media screen and (max-width: 1024px) {
+        font-size: 5rem;
+      }
       font-family: "Tex Gyre Heros";
-      margin: 0;
       margin-bottom: -2rem;
     }
 
@@ -33,7 +35,7 @@
   align-items: center;
   height: 100%;
   overflow-x: hidden;
-  max-width: 80%;
+  max-width: 100%;
 }
 
 .post-container {
